# lumora-contract

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Makefile
.github/workflows/: ci.yml
campaign/: Cargo.toml
campaign/src/: lib.rs  storage.rs  test.rs
common/: Cargo.toml
common/src/: lib.rs
docs/: deployment.md
factory/: Cargo.toml
scripts/: deploy.sh
scripts/wasm/: optimize-wasm.sh
